--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Beauty</title>
 </head>
 <body>
-    
+    <header>
+        <ul>
+            <li><a href="">Доставка</a></li>
+            <li><a href="">Оплата</a></li>
+            <li><a href="">Отзывы</a></li>
+            <li><a href="">Вопрос-ответ</a></li>
+            <li><a href="">Контакты</a></li>
+        </ul>
+    </header>
 </body>
 </html>
