add nav and styles for it

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 </head>
 <body>
     <header>
-        <ul>
-            <li><a href="">Доставка</a></li>
-            <li><a href="">Оплата</a></li>
-            <li><a href="">Отзывы</a></li>
-            <li><a href="">Вопрос-ответ</a></li>
-            <li><a href="">Контакты</a></li>
-        </ul>
+        <nav>
+            <ul class="nav">
+                <li><a href="">Доставка</a></li>
+                <li><a href="">Оплата</a></li>
+                <li><a href="">Отзывы</a></li>
+                <li><a href="">Вопрос-ответ</a></li>
+                <li><a href="">Контакты</a></li>
+            </ul>
+        </nav>   
     </header>
 </body>
 </html>
