--- a/index.html
+++ b/index.html
@@ -9,15 +9,28 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul class="nav">
-                <li><a href="">Доставка</a></li>
-                <li><a href="">Оплата</a></li>
-                <li><a href="">Отзывы</a></li>
-                <li><a href="">Вопрос-ответ</a></li>
-                <li><a href="">Контакты</a></li>
-            </ul>
-        </nav>   
+        <div class="wrapper">
+            <nav>
+                <ul class="nav">
+                    <li><a href="">Доставка</a></li>
+                    <li><a href="">Оплата</a></li>
+                    <li><a href="">Отзывы</a></li>
+                    <li><a href="">Вопрос-ответ</a></li>
+                    <li><a href="">Контакты</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="bg-white">
+            <div class="wrapper">
+                <div class="header">
+                    <div class="logo">BEAUTY</div>
+                    <div>
+                        <span>8 (812) 123-45-67</span>
+                        <button type="button">Обратный звонок</button>
+                    </div>  
+                </div>
+            </div>
+        </div>   
     </header>
 </body>
 </html>
