--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="wrapper">
                 <div class="header">
                     <div class="logo">BEAUTY</div>
-                    <div>
+                    <div class="header-info">
                         <span>8 (812) 123-45-67</span>
                         <button type="button">Обратный звонок</button>
                     </div>  
