--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beauty</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -21,13 +22,15 @@
             </nav>
         </div>
         <div class="bg-white">
-            <div class="wrapper">
-                <div class="header">
-                    <div class="logo">BEAUTY</div>
-                    <div class="header-info">
-                        <span>8 (812) 123-45-67</span>
-                        <button type="button">Обратный звонок</button>
-                    </div>  
+            <div class="header">
+                <div class="wrapper">
+                    <div class="header-top">
+                        <div class="logo">BEAUTY</div>
+                        <div class="header-info">
+                            <span>8 (812) 123-45-67</span>
+                            <button type="button">Обратный звонок</button>
+                        </div>  
+                    </div>
                 </div>
             </div>
         </div>   
