--- a/index.html
+++ b/index.html
@@ -32,6 +32,19 @@
                         </div>  
                     </div>
                 </div>
+                <hr>
+                <div class="wrapper">
+                    <div class="header-bottom">
+                        <ul class="nav">
+                            <li><a href="">Парикмахерская</a></li>
+                            <li><a href="">Барбершоп</a></li>
+                            <li><a href="">Маникюр</a></li>
+                            <li><a href="">Педикюр</a></li>
+                            <li><a href="">Массаж</a></li>
+                            <li><a href="">Мебель</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>   
     </header>
