--- a/index.html
+++ b/index.html
@@ -55,5 +55,78 @@
             <a class="btn" href="#">Подробнее</a>
         </div>
     </section>
+    <section>
+        <div class="wrapper">
+            <div class="grid">
+                <div class="grid-item">
+                    <h2 class="title-h2">Специальные предложения</h2>
+                </div>
+                <div class="grid-item">
+                    <img src="img/car.svg.svg" alt="Delivery">
+                </div>
+                <div class="grid-item">
+                    <div class="bg-white">
+                        <div class="thumb">
+                            <img src="img/chair.png.png" alt="Chair">
+                        </div>
+                        <p class="grid-title">Парикмахерское кресло «Норм» гидравлическое</p>
+                        <p class="grid-price">9 900 ₽</p>
+                        <a class="grid-btn" href="#">Купить</a>
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <div class="bg-white">
+                        <div class="thumb">
+                            <img src="img/chair.png.png" alt="Chair">
+                        </div>
+                        <p class="grid-title">Парикмахерское кресло «Норм» гидравлическое</p>
+                        <p class="grid-price">9 900 ₽</p>
+                        <a class="grid-btn" href="#">Купить</a>
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <div class="bg-white">
+                        <div class="thumb">
+                            <img src="img/chair.png.png" alt="Chair">
+                        </div>
+                        <p class="grid-title">Парикмахерское кресло «Норм» гидравлическое</p>
+                        <p class="grid-price">9 900 ₽</p>
+                        <a class="grid-btn" href="#">Купить</a>
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <div class="bg-white">
+                        <div class="thumb">
+                            <img src="img/chair.png.png" alt="Chair">
+                        </div>
+                        <p class="grid-title">Парикмахерское кресло «Норм» гидравлическое</p>
+                        <p class="grid-price">9 900 ₽</p>
+                        <a class="grid-btn" href="#">Купить</a>
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <div class="bg-green">
+                        <div class="bg-green-item">
+                            <h3>Получайте бонусы и подарки</h3>
+                            <p>Каждый месяц разыгрываем<br>10 000 рублей для наших клиентов</p>
+                            <input type="email" placeholder="Введите e-mail">
+                        </div>
+                        <div class="bg-green-item">
+                            <img src="img/envelope.svg.svg" alt="Envelope">
+                        </div>
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <div class="bg-green">
+                        <div class="bg-green-item">
+                            <h3>Заходите к нам</h3>
+                            <p>Более 300 магазинов<br>по всей России</p>
+                            <a class="btn" href="#">Карта магазинов</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
