--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
     <section>
         <div class="wrapper">
             <div class="grid">
-                <div class="grid-item">
+                <div class="grid-item grid-item-title">
                     <h2 class="title-h2">Специальные предложения</h2>
                 </div>
-                <div class="grid-item">
+                <div class="grid-item grid-item-img">
                     <img src="img/car.svg.svg" alt="Delivery">
                 </div>
-                <div class="grid-item">
+                <div class="grid-item grid-item-catalog">
                     <div class="bg-white">
                         <div class="thumb">
                             <img src="img/chair.png.png" alt="Chair">
@@ -74,7 +74,7 @@
                         <a class="grid-btn" href="#">Купить</a>
                     </div>
                 </div>
-                <div class="grid-item">
+                <div class="grid-item grid-item-catalog">
                     <div class="bg-white">
                         <div class="thumb">
                             <img src="img/chair.png.png" alt="Chair">
@@ -84,7 +84,7 @@
                         <a class="grid-btn" href="#">Купить</a>
                     </div>
                 </div>
-                <div class="grid-item">
+                <div class="grid-item grid-item-catalog">
                     <div class="bg-white">
                         <div class="thumb">
                             <img src="img/chair.png.png" alt="Chair">
@@ -94,7 +94,7 @@
                         <a class="grid-btn" href="#">Купить</a>
                     </div>
                 </div>
-                <div class="grid-item">
+                <div class="grid-item grid-item-catalog">
                     <div class="bg-white">
                         <div class="thumb">
                             <img src="img/chair.png.png" alt="Chair">
@@ -104,19 +104,17 @@
                         <a class="grid-btn" href="#">Купить</a>
                     </div>
                 </div>
-                <div class="grid-item">
+                <div class="grid-item grid-item-left">
                     <div class="bg-green">
                         <div class="bg-green-item">
                             <h3>Получайте бонусы и подарки</h3>
                             <p>Каждый месяц разыгрываем<br>10 000 рублей для наших клиентов</p>
                             <input type="email" placeholder="Введите e-mail">
                         </div>
-                        <div class="bg-green-item">
-                            <img src="img/envelope.svg.svg" alt="Envelope">
-                        </div>
+                            <img class=" bg-green-img" src="img/envelope.svg.svg" alt="Envelope">
                     </div>
                 </div>
-                <div class="grid-item">
+                <div class="grid-item grid-item-rigth">
                     <div class="bg-green">
                         <div class="bg-green-item">
                             <h3>Заходите к нам</h3>
