pixel pefect corection

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <a class="btn" href="#">Подробнее</a>
         </div>
     </section>
-    <section>
+    <section class="catalog">
         <div class="wrapper">
             <div class="grid">
                 <div class="grid-item grid-item-title">
