add footer-bottom and styles for it

--- a/index.html
+++ b/index.html
@@ -126,5 +126,20 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="bg-white">
+            <div class="wrapper">
+                <div class="footer-top">
+
+                </div>
+            </div>
+        </div>
+        <div class="wrapper">
+            <div class="footer-bottom">
+                <p>Лучший магазин (с) 2019 Все права защищены. Интернет-магазин оборудования для салонов красоты</p>
+                <a href="#">Политика конфиденциальности</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
